# document-analyst-assistant

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  README_en.md  compose.yaml  docker-compose.yml  dockerfile  init_azure_storage.py  main.py  output_chunk.txt  pyproject.toml  requirements.txt  run.sh
chroma_db/: chroma.sqlite3
frontend/: Dockerfile  app.py  dockerfile
frontend/.files/48bdb3eb-8d78-4ff5-9ba4-c7587f1113f5/: 017e83a4-ad34-4a75-b5fa-7569404f6888.docx
src/: Dockerfile  dockerfile  main.py
src/api/: __init__.py
src/api/helpers/: exception_handler.py
src/api/models/: __init__.py  schemas.py
src/api/routers/: __init__.py  questionAnswering.py
src/application/: __init__.py  embedding.py  indexing.py  process_file.py  rag_pipeline.py
src/chroma_db/: chroma.sqlite3
src/domain/: __init__.py  chromaIndexer.py  chunker.py  embedder.py  rag_pipeline.py  upload_file.py
src/domain/indexing/: __init__.py  chunking.py  read_file.py  test.txt
src/infra/: chromaIndexer.py
src/shared/utils/: __init__.py  classification_query.py  document_filter.py  embedding_query.py  logger.py  process_pdf.py  text_processing.py
src/shared/utils/indexing/: __init__.py  process_file.py
src/shared/utils/pre_retrival/: __init__.py  vector_search.py
